Change title of not-flexi-missing-scaler example file

--- a/examples/not-flexi-missing-scaler.html
+++ b/examples/not-flexi-missing-scaler.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-	<title>I am flexi 🤖</title>
+	<title>I pretend to be flexi, but I'm missing a scaler :(. I guess I get a duck too 🦆 :)</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="styles.scss" type="text/css">
 	<script>window.clickTag = '';</script>
